--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chris Breum</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Velkommen til</h1>
+    <h3>Chris's hjemmeside</h3>
+  </body>
 </html>
